--- a/src/config/menu-order-config.json
+++ b/src/config/menu-order-config.json
@@ -18,7 +18,9 @@
     "ExpertSystem",
     "Expsys",
 
-    "AssetsAnalyse"
+    "AssetsAnalyse",
+    
+    "ErgoCities"
   ],
   
   "separators": {
@@ -26,6 +28,6 @@
     "5": "Модули",
     "10": "Обучение",
     "14": "Трендовая аналитика",
-    "15": "Цифровая среда"
+    "15": "Цифровая лаборатория"
   }
 } 
